--- a/templates/compute.html
+++ b/templates/compute.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>My application is changed</title>
+<title>My application</title>
   <h1>Hello, World!</h1>
   <p> Result is {{result}} Enter an array of elements using yaml format in the first form.</br>The second form accepts a single element.</br>
   The third element accepts a single element too. </br>The value entered in the second form multiplied with the first form values and is looked
